# devbox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  railway.toml  start.ps1  start.sh
.github/workflows/: ci.yml  release-macos-cli.yml
.plans/: README.md
.plans/html/: architecture.html  index.html  phase-0.html  phase-1.html  phase-2.html  style.css  validation.html
.product/: README.md  architecture-foundation.md  context.md  experiments.md  go-to-market.md  kpi-framework.md  market-sizing.md  product-business-analysis.md  product-strategy.md  risk-register.md  roadmap.md  sources.md
.product/data/: assumptions.json  kpis.csv  market-sizing.csv  roadmap.csv
.product/html/: index.html  market.html  metrics.html  roadmap.html  style.css
.product/templates/: user-interview-script.md  weekly-product-review.md
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json
apps/site/: .env.example  AGENTS.md  README.md  package.json  server.mjs
apps/web/: .env.example  README.md  package.json  server.mjs
bindhub/: .env.example  README.md  manifest.toml
bindhub/crates/: README.md
bindhub/crates/bindhub-api/: Cargo.toml
bindhub/crates/bindhub-api/src/: lib.rs  main.rs
bindhub/crates/bindhub-cli/: Cargo.toml
bindhub/crates/bindhub-cli/src/: main.rs  product.rs
bindhub/crates/bindhub-cli/tests/: auth_boundary_cli.rs  product_cli.rs  snapshot_cli.rs
bindhub/crates/bindhub-daemon/: Cargo.toml
bindhub/crates/bindhub-daemon/src/: main.rs
bindhub/crates/bindhub-daemon/tests/: watch_cli.rs
bindhub/crates/bindhub-materialize/: Cargo.toml
bindhub/crates/bindhub-materialize/src/: lib.rs
bindhub/crates/bindhub-metadata/: Cargo.toml
bindhub/crates/bindhub-metadata/src/: lib.rs  main.rs
bindhub/crates/bindhub-remote/: Cargo.toml
bindhub/crates/bindhub-remote/src/: lib.rs
bindhub/crates/bindhub-snapshot/: Cargo.toml
bindhub/crates/bindhub-snapshot/src/: lib.rs  restore.rs
bindhub/crates/bindhub-store/: Cargo.toml
bindhub/crates/bindhub-store/src/: blob_cache.rs  lib.rs
crates/devbox-api/: Cargo.toml
crates/devbox-cli/: Cargo.toml
crates/devbox-cli/src/: main.rs  product.rs
crates/devbox-cli/tests/: auth_boundary_cli.rs  product_cli.rs  snapshot_cli.rs
crates/devbox-conflict/: Cargo.toml
crates/devbox-core/: Cargo.toml
crates/devbox-daemon/: Cargo.toml
crates/devbox-daemon/src/: main.rs
crates/devbox-daemon/tests/: watch_cli.rs
crates/devbox-git/: Cargo.toml
crates/devbox-materialize/: Cargo.toml
crates/devbox-materialize/src/: lib.rs
crates/devbox-metadata/: Cargo.toml
crates/devbox-metadata/src/: lib.rs  main.rs
crates/devbox-platform/: Cargo.toml
crates/devbox-snapshot/: Cargo.toml
crates/devbox-snapshot/src/: lib.rs  restore.rs
crates/devbox-store/: Cargo.toml
crates/devbox-store/src/: blob_cache.rs  lib.rs
crates/devbox-sync/: Cargo.toml
crates/devbox-sync/src/: hosted.rs  lib.rs  s3.rs
crates/loom-cli/: Cargo.toml
crates/loom-cli/src/: main.rs
crates/loom-cli/tests/: cli.rs
crates/loom-core/: Cargo.toml
crates/loom-daemon/: Cargo.toml
crates/loom-daemon/src/: lib.rs  main.rs
crates/loom-store/: Cargo.toml
crates/loom-sync/: Cargo.toml
crates/loom-sync/src/: lib.rs
crates/loom-worktree/: Cargo.toml
crates/loom-worktree/src/: lib.rs
devbox/: README.md  manifest.toml
devbox-web/: .env.example  README.md  package.json  pnpm-lock.yaml
devbox/crates/: README.md
devbox/crates/devbox-api/: Cargo.toml
devbox/crates/devbox-api/src/: lib.rs  main.rs
devbox/crates/devbox-cli/: Cargo.toml
devbox/crates/devbox-cli/src/: main.rs  product.rs
devbox/crates/devbox-cli/tests/: auth_boundary_cli.rs  product_cli.rs
devbox/crates/devbox-remote/: Cargo.toml
devbox/crates/devbox-remote/src/: lib.rs
devbox/crates/devbox-store/: Cargo.toml
devbox/crates/devbox-store/src/: lib.rs
docs/: README.md  alpha-cli-distribution.md  devbox-and-loom.md  web.md
docs/architecture/: README.md  auth-device-pairing-foundation.md  bindhub-hosted-loom-remote.md  conflict-divergent-snapshot-foundation.md  devbox-hosted-loom-remote.md  electron-alpha-control-surface.md  full-scale-project-shape.md  hosted-metadata-api-foundation.md  hosted-metadata-sync-flow-wiring.md  identity-encrypted-sync-foundation.md  live-sync-daemon-foundation.md  local-change-feed.md  local-metadata-store.md  local-sync-preflight-cursor-reconciliation.md  local-watcher-daemon.md  loom-storage-consistency.md  managed-object-credential-leases-foundation.md  mvp-technical-foundation.md  native-filesystem-adapter.md  private-alpha-ux-safety-completion.md  production-auth-account-boundary.md  production-pairing-recovery-rotation-foundation.md  project-scanner-policy.md  s3-compatible-blob-provider-foundation.md  second-device-materialization-foundation.md  secret-detection-block-policy.md  snapshot-manifest-foundation.md
docs/bindhub/: README.md  loom-and-bindhub.md  sparse-folders.md  workspace-adapters-alpha.md
docs/devbox/: README.md  loom-and-devbox.md  sparse-folders.md  workspace-adapters-alpha.md
docs/evidence/: alpha-readiness.md
docs/loom/: README.md
infra/hosted/: README.md  (+8 more)
loom/: README.md  manifest.toml
loom/crates/loom-cli/: Cargo.toml
loom/crates/loom-cli/src/: main.rs
loom/crates/loom-cli/tests/: cli.rs
loom/crates/loom-fs/: Cargo.toml
loom/crates/loom-fs/src/: lib.rs
loom/crates/loom-sync/: Cargo.toml
loom/crates/loom-sync/src/: lib.rs
loom/crates/loom-workspace/: Cargo.toml
loom/crates/loom-workspace/src/: lib.rs
scripts/: alpha-two-device-smoke.sh  alpha-workspace-adapters-smoke.ps1  bindhub-api-local.ps1  bindhub-live-sync-alpha.sh  devbox-live-sync-alpha.sh  install-bindhub.ps1  install-bindhub.sh  install-devbox.ps1  install-devbox.sh  load-r2-env.sh  local-dev-cli-browser-auth-smoke.ps1  mvp-two-device-smoke  mvp-two-device-smoke.ps1  package-cli.ps1  package-cli.sh  package-desktop-alpha.sh  publish-cli-release.ps1  publish-cli-release.sh  test-postgres-metadata.sh
(+128 files in other folders)
