[workspace]
members = [
    "crates/devbox-auth",
    "crates/devbox-api",
    "crates/devbox-cli",
    "crates/devbox-conflict",
    "crates/devbox-core",
    "crates/devbox-daemon",
    "crates/devbox-git",
    "crates/devbox-materialize",
    "crates/devbox-metadata",
    "crates/devbox-platform",
    "crates/devbox-snapshot",
    "crates/devbox-store",
    "crates/devbox-sync",
    "crates/loom-cli",
    "crates/loom-core",
    "crates/loom-daemon",
    "crates/loom-git",
    "crates/loom-pack",
    "crates/loom-store",
    "crates/loom-sync",
    "crates/loom-worktree",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Snowy7/devbox"
rust-version = "1.75"
