[workspace]
members = [
    "devbox/crates/devbox-auth",
    "devbox/crates/devbox-api",
    "devbox/crates/devbox-cli",
    "devbox/crates/devbox-conflict",
    "devbox/crates/devbox-core",
    "devbox/crates/devbox-daemon",
    "devbox/crates/devbox-git",
    "devbox/crates/devbox-materialize",
    "devbox/crates/devbox-metadata",
    "devbox/crates/devbox-platform",
    "devbox/crates/devbox-remote",
    "devbox/crates/devbox-snapshot",
    "devbox/crates/devbox-store",
    "devbox/crates/devbox-sync",
    "loom/crates/loom-cli",
    "loom/crates/loom-core",
    "loom/crates/loom-daemon",
    "loom/crates/loom-git",
    "loom/crates/loom-pack",
    "loom/crates/loom-store",
    "loom/crates/loom-sync",
    "loom/crates/loom-workspace",
    "loom/crates/loom-worktree",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Snowy7/devbox"
rust-version = "1.88"
