[workspace]
members = [
    "bindhub/crates/bindhub-auth",
    "bindhub/crates/bindhub-api",
    "bindhub/crates/bindhub-cli",
    "bindhub/crates/bindhub-conflict",
    "bindhub/crates/bindhub-core",
    "bindhub/crates/bindhub-daemon",
    "bindhub/crates/bindhub-git",
    "bindhub/crates/bindhub-materialize",
    "bindhub/crates/bindhub-metadata",
    "bindhub/crates/bindhub-platform",
    "bindhub/crates/bindhub-remote",
    "bindhub/crates/bindhub-snapshot",
    "bindhub/crates/bindhub-store",
    "bindhub/crates/bindhub-sync",
    "loom/crates/loom-cli",
    "loom/crates/loom-core",
    "loom/crates/loom-daemon",
    "loom/crates/loom-fs",
    "loom/crates/loom-git",
    "loom/crates/loom-pack",
    "loom/crates/loom-store",
    "loom/crates/loom-sync",
    "loom/crates/loom-workspace",
    "loom/crates/loom-worktree",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Snowy7/bindhub"
rust-version = "1.88"
