[package]
name = "devbox-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "devbox"
path = "src/main.rs"

[dependencies]
devbox-auth = { path = "../devbox-auth" }
devbox-core = { path = "../devbox-core" }
devbox-snapshot = { path = "../devbox-snapshot" }
devbox-store = { path = "../devbox-store" }
devbox-sync = { path = "../devbox-sync" }

[dev-dependencies]
rusqlite = "0.31"
tempfile = "3"
