[package]
name = "devbox-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "devbox-daemon"
path = "src/main.rs"

[dependencies]
devbox-snapshot = { path = "../devbox-snapshot" }
notify = "6"

[dev-dependencies]
rusqlite = "0.31"
tempfile = "3"
