[package]
name = "devbox-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "devbox-daemon"
path = "src/main.rs"

[dependencies]
devbox-materialize = { path = "../devbox-materialize" }
devbox-metadata = { path = "../devbox-metadata" }
devbox-snapshot = { path = "../devbox-snapshot" }
devbox-store = { path = "../devbox-store" }
devbox-sync = { path = "../devbox-sync" }
notify = "6"
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
devbox-auth = { path = "../devbox-auth" }
rusqlite = "0.31"
tempfile = "3"
