[package]
name = "devbox-materialize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
devbox-auth = { path = "../devbox-auth" }
devbox-conflict = { path = "../devbox-conflict" }
devbox-core = { path = "../devbox-core" }
devbox-metadata = { path = "../devbox-metadata" }
devbox-snapshot = { path = "../devbox-snapshot" }
devbox-store = { path = "../devbox-store" }
devbox-sync = { path = "../devbox-sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
axum = "0.7"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
