[package]
name = "devbox-metadata"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.7"
devbox-auth = { path = "../devbox-auth" }
http = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
