[package]
name = "devbox-snapshot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
devbox-core = { path = "../devbox-core" }
devbox-store = { path = "../devbox-store" }

[dev-dependencies]
tempfile = "3"
