[package]
name = "devbox-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
chacha20poly1305 = "0.10"
devbox-core = { path = "../devbox-core" }
devbox-store = { path = "../devbox-store" }
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
