[package]
name = "loom-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
loom-core = { path = "../loom-core" }
loom-daemon = { path = "../loom-daemon" }
loom-store = { path = "../loom-store" }
loom-sync = { path = "../loom-sync" }
loom-worktree = { path = "../loom-worktree" }

[dev-dependencies]
devbox-api = { path = "../devbox-api" }
tempfile = "3"
