[package]
name = "loom-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "loom-daemon"
path = "src/main.rs"

[dependencies]
loom-core = { path = "../loom-core" }
loom-store = { path = "../loom-store" }
loom-sync = { path = "../loom-sync" }
loom-worktree = { path = "../loom-worktree" }
notify = "6"

[dev-dependencies]
tempfile = "3"
