[package]
name = "loom-worktree"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
loom-core = { path = "../loom-core" }
loom-store = { path = "../loom-store" }

[dev-dependencies]
tempfile = "3"
