[package]
name = "bindhub-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "bindhub-daemon"
path = "src/main.rs"

[dependencies]
bindhub-materialize = { path = "../bindhub-materialize" }
bindhub-metadata = { path = "../bindhub-metadata" }
bindhub-snapshot = { path = "../bindhub-snapshot" }
bindhub-store = { path = "../bindhub-store" }
bindhub-sync = { path = "../bindhub-sync" }
notify = "6"
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
axum = "0.7"
bindhub-auth = { path = "../bindhub-auth" }
rusqlite = "0.31"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
