[package]
name = "bindhub-materialize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
bindhub-auth = { path = "../bindhub-auth" }
bindhub-conflict = { path = "../bindhub-conflict" }
bindhub-core = { path = "../bindhub-core" }
bindhub-metadata = { path = "../bindhub-metadata" }
bindhub-snapshot = { path = "../bindhub-snapshot" }
bindhub-store = { path = "../bindhub-store" }
bindhub-sync = { path = "../bindhub-sync" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
axum = "0.7"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
