[package]
name = "bindhub-metadata"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.7"
bindhub-auth = { path = "../bindhub-auth" }
bindhub-sync = { path = "../bindhub-sync" }
http = "1"
postgres = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
url = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
