[package]
name = "bindhub-snapshot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
bindhub-core = { path = "../bindhub-core" }
bindhub-store = { path = "../bindhub-store" }

[dev-dependencies]
tempfile = "3"
