[package]
name = "bindhub-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
bindhub-auth = { path = "../bindhub-auth" }
bindhub-conflict = { path = "../bindhub-conflict" }
bindhub-core = { path = "../bindhub-core" }
getrandom = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
