[package]
name = "devbox-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
devbox-platform = { path = "../devbox-platform" }
devbox-sync = { path = "../devbox-sync" }
loom-core = { path = "../../../loom/crates/loom-core" }
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
