[package]
name = "devbox-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "devbox"
path = "src/main.rs"

[dependencies]
blake3 = "1"
devbox-auth = { path = "../devbox-auth" }
devbox-conflict = { path = "../devbox-conflict" }
devbox-core = { path = "../devbox-core" }
devbox-materialize = { path = "../devbox-materialize" }
devbox-metadata = { path = "../devbox-metadata" }
devbox-remote = { path = "../devbox-remote" }
devbox-snapshot = { path = "../devbox-snapshot" }
devbox-store = { path = "../devbox-store" }
devbox-sync = { path = "../devbox-sync" }
loom-core = { path = "../../../loom/crates/loom-core" }
loom-daemon = { path = "../../../loom/crates/loom-daemon" }
loom-store = { path = "../../../loom/crates/loom-store" }
loom-sync = { path = "../../../loom/crates/loom-sync" }
loom-worktree = { path = "../../../loom/crates/loom-worktree" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
devbox-api = { path = "../devbox-api" }
rusqlite = "0.31"
tempfile = "3"
