[package]
name = "devbox-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
devbox-auth = { path = "../devbox-auth" }
devbox-conflict = { path = "../devbox-conflict" }
devbox-core = { path = "../devbox-core" }
getrandom = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
