[package]
name = "loom-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
loom-core = { path = "../loom-core" }
loom-daemon = { path = "../loom-daemon" }
loom-fs = { path = "../loom-fs" }
loom-store = { path = "../loom-store" }
loom-sync = { path = "../loom-sync" }
loom-workspace = { path = "../loom-workspace" }
loom-worktree = { path = "../loom-worktree" }
bindhub-remote = { path = "../../../bindhub/crates/bindhub-remote" }

[dev-dependencies]
bindhub-api = { path = "../../../bindhub/crates/bindhub-api" }
tempfile = "3"
