[package]
name = "loom-fs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
loom-core = { path = "../loom-core" }
loom-store = { path = "../loom-store" }
loom-worktree = { path = "../loom-worktree" }

[dev-dependencies]
tempfile = "3"
