[package]
name = "loom-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
loom-core = { path = "../loom-core" }
loom-pack = { path = "../loom-pack" }
loom-store = { path = "../loom-store" }

[dev-dependencies]
tempfile = "3"
