[package]
name = "loom-workspace"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1"
loom-core = { path = "../loom-core" }
loom-store = { path = "../loom-store" }
loom-sync = { path = "../loom-sync" }
loom-worktree = { path = "../loom-worktree" }

[dev-dependencies]
tempfile = "3"
